# giantsmind

./: LICENSE.txt  README.md  chat_with_docs.py  get_metadata.py  index.md  parse_documents.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
sandbox/: 07.advanced-rag-with-llama-3-in-langchain ORIGINAL.py  07.advanced-rag-with-llama-3-in-langchain.py  RAG_first.py  RAG_second.py  first.py  giant_cli.py  parse_documents_OLD.py  test_layoutlmv3.py
src/giantsmind/: chat_with_docs.py  cli_entry.py  get_metadata.py  parse_documents.py  search.py  utils.py
src/giantsmind/agent/: answering_agent.py  config.py  fullcontext_chat.py  main.py  parsing_agent.py  sql_agent.py  todo.org
src/giantsmind/agent/messages/: answering_prompt.txt  parsing_prompt.txt
src/giantsmind/agents/: answering.py  config.py  fullcontext_chat.py  main.py  question_parsing.py  sql.py
src/giantsmind/cli/: collection_operations.py  context.py  display.py  first_app.py  helpers.py  interact_operations.py  main.py  search_operations.py  state.py  state_functions.py
src/giantsmind/core/: data_management.py  get_metadata.py  interact_papers.py  models.py  parse_documents.py  process_results.py  qdrant.py  search.py
src/giantsmind/database/: author_operations.py  collection_operations.py  config.py  database_functions.py  db_connection.py  journal_operations.py  main.py  models.py  operations.py  paper_operations.py  query.py  query_executor.py  schema.py  schema.sql  utils.py
src/giantsmind/metadata_db/: config.py  database_functions.py  db_connection.py  main.py  models.py  query.py  query_executor.py  schema.py  string_utils.py  utils.py
src/giantsmind/scripts/: chat_with_docs.py  interact_papers.py  parse_papers.py  routing_chain.py
src/giantsmind/tools/: wikipedia_tool.py
src/giantsmind/utils/: local.py  logging.py  papers.db  pdf_tools.py  utils.py
src/giantsmind/vector_db/: #chroma_client.py#  base.py  chroma_client.py  prep_docs.py  qdrant.py  search.py  test_chromadb.py
tests/: conftest.py
tests/test_giantsmind/: test_get_metadata.py  test_search.py  test_search_data.py
tests/test_giantsmind/agents/: test_answering_agent.py  test_parsing_agent.py  test_sql.py
tests/test_giantsmind/core/: test_data_management.py  test_qdrant.py  test_search.py
tests/test_giantsmind/database/: test_collection_operations.py  test_journal_operations.py  test_operations.py  test_paper_operations.py  test_schema.py  test_utils.py
(+6 files in other folders)
