[metadata]
name = giantsmind
version = 0.0.1
license = MIT
description = A package to interact with local PDFs with NLP
long_description = file: README.md
long_description_content_type = text/markdown
author = Pierre Enel
author_email = pierre.enel@protonmail.com
classifiers=
   Development Status :: 2 - Pre-Alpha
   Intended Audience :: Science/Research
   License :: OSI Approved :: BSD License
   Operating System :: Unix
   Programming Language :: Python :: 3.12
   Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   langchain
   langchain_community
   langchain_groq
   langchain_qdrant
   llama_parse
   qdrant_client
   pymupdf
   PyPDF2

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-mock

[options.packages.find]
where=src

[flake8]
max-line-length = 110
ignore = E266, D100, D103