[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   langchain
   langchain_community
   langchain_groq
   langchain_qdrant
   llama_parse
   qdrant_client
   pymupdf
   PyPDF2

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-mock

[options.packages.find]
where=src

[flake8]
max-line-length = 110
ignore = E266, D100, D103, E226